# py-dashboarding

./: .gitignore  prepare_notebooks.sh  pyproject.toml  readme.md
.github/workflows/: azure-webapps-python.yml  main_ukraine-war-news-dashboard.yml
Altair/covid/: CovidAltair.ipynb
binder/: postBuild  requirements.txt
correlcon/: Correlcon-Copy1.ipynb
dashboards/covid/: CovidAltair.ipynb
dashboards/uk_war_news/: VisualizeUkraine.ipynb  readme.md  script.py
data/: world-banks-income-groups.csv
related_work/correlcon/: Correlcon.ipynb
solution/: 1. Data Validation and Checks.ipynb  2 Relationships and Hierarchy.ipynb  3 Analysing time.ipynb  4 Geographic information.ipynb  5 Feature Discovery.ipynb  6a Voila.ipynb  6c Panel.ipynb  _helper.py
training/: .gitignore  1. APIs.ipynb  2.X Altair.ipynb  2.X. PlotlyExpress.ipynb  3.1. Introduction to Panel.ipynb  3.1. Introduction to Voila.ipynb  3.2. Intoduction to Streamlit.ipynb  3.3. Dashboard final.ipynb  3.4. Mixing Plotting Libraries Corona Demo.ipynb  VisualizeUkraine.ipynb  _prepare.ipynb  streamlit_dashboard.py
workshop/: .gitignore  1. APIs.ipynb  1. Data Validation and Checks.ipynb  2 Relationships and Hierarchy.ipynb  3 Analysing time.ipynb  3 Time-Dimension.ipynb  3.3. Introduction to Panel.ipynb  3.4. Mixing Plotting Libaries minimal.ipynb  4 Geographic information.ipynb  5 Feature Discovery.ipynb  5 Working with Maps.ipynb  6 Prepare Dashboards.ipynb  6a Voila.ipynb  6b Streamlit.ipynb  6c Panel.ipynb  CLASS.xls  _4 Feature Discovery.ipynb  _prepare.ipynb  installation on colab.ipynb  readme.ipynb
(+3 files in other folders)
