[tool.poetry]
name = "py-dashboarding"
version = "0.1.0"
description = ""
authors = ["Nico Kreiling <nico.kreiling@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
panel = "^0.12.4"
altair = "^4.1.0"
plotly = "pandas"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
streamlit = "^1.1.0"
jupyter-dash = "^0.4.0"
ipywidgets = "^7.6.5"
seaborn = "^0.11.2"
pandas-bokeh = "^0.5.5"

[tool.poetry.dev-dependencies]
ipykernel = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
