[tool.poetry]
name = "py-dashboarding"
version = "0.1.0"
description = ""
authors = ["Nico Kreiling <nico.kreiling@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
panel = "^0.12.4"
altair = "^4.1.0"
plotly = "pandas"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
streamlit = "^1.1.0"
jupyter-dash = "^0.4.0"
ipywidgets = "^7.6.5"
seaborn = "^0.11.2"
pandas-bokeh = "^0.5.5"
nbformat = "^5.4.0"
nbconvert = "^6.5.0"
bokeh = "^2.4.3"
watchdog = "^2.1.8"
voila = "^0.3.5"
hvplot = "^0.8.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
